<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/cartItem_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cartItem_Name"
                android:textSize="25dp"
                android:text="@string/cartItem_Name"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cartItem_Cat"
                android:textSize="15dp"
                android:text="@string/cartItem_category" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cartItem_Price"
                android:textSize="15dp"
                android:text="@string/cartItem_Price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cartItem_Qty"
                android:textSize="15dp"
                android:text="@string/cartItem_Qty"/>

            <Button
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/cartItem_close"
                android:layout_marginLeft="240dp"
                android:background="@drawable/ic_close_black_24dp"
                android:textColor="@android:color/black"/>

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>