<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="20dp"
            android:onClick="addItem"
            android:text="@string/addItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView62" />

        <Button
            android:id="@+id/btnshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="20dp"
            android:text="@string/showItem"
            app:layout_constraintStart_toEndOf="@+id/btnadd"
            app:layout_constraintTop_toBottomOf="@+id/txtid" />

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="20dp"
            android:text="@string/updateItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnadd" />

        <Button
            android:id="@+id/btndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:text="@string/deleteItem"
            app:layout_constraintStart_toEndOf="@+id/btnupdate"
            app:layout_constraintTop_toBottomOf="@+id/btnshow" />

        <EditText
            android:id="@+id/txttitle"
            android:layout_width="170dp"
            android:layout_height="42dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView32"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <EditText
            android:id="@+id/txtdescription"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView33"
            app:layout_constraintTop_toBottomOf="@+id/txttitle" />

        <ImageView
            android:id="@+id/image_addPromo"
            android:layout_width="170dp"
            android:layout_height="100dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintTop_toBottomOf="@+id/txtdescription" />

        <EditText
            android:id="@+id/txtprice"
            android:layout_width="170dp"
            android:layout_height="43dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number|textPersonName"
            android:text=" "
            app:layout_constraintStart_toEndOf="@+id/textView37"
            app:layout_constraintTop_toBottomOf="@+id/image_addPromo" />

        <EditText
            android:id="@+id/txtdiscount"
            android:layout_width="170dp"
            android:layout_height="43dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number|textPersonName"
            android:text=" "
            app:layout_constraintStart_toEndOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/txtprice" />

        <EditText
            android:id="@+id/txtid"
            android:layout_width="170dp"
            android:layout_height="42dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number|textPersonName"
            android:text=" "
            app:layout_constraintStart_toEndOf="@+id/textView62"
            app:layout_constraintTop_toBottomOf="@+id/txtdiscount" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="132dp"
            android:layout_height="42dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/itmTitle"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="132dp"
            android:layout_height="47dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="Description"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="134dp"
            android:layout_height="100dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="image"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="134dp"
            android:layout_height="42dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="price"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="138dp"
            android:layout_height="41dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="discount"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_marginLeft="116dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="16dp"
            android:text="add_promo"
            android:textColor="#BC8080"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="136dp"
            android:layout_height="39dp"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="id"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>